# wuerzburg-tree-ping

./: .gitignore  README.md  pyproject.toml
dashboard/: README.md  __init__.py  app.py  generate_dashboard.py  index.html
docs/: hermes-cron.md
src/wuerzburg_tree_ping/: __init__.py  bike.py  cli.py  common.py  dashboard.py  events.py  parking.py  pedestrian.py  toilets.py  waste.py
tests/: test_alerts.py  test_dashboard.py  test_more_usecases.py  test_parking.py
usecases/accessible-toilets-helper/: HERMES.md  README.md  accessible_toilets_helper.py
usecases/bike-counter-pulse/: HERMES.md  README.md  bike_counter_pulse.py
usecases/parking-ping/: README.md  parking_ping.py
usecases/pedestrian-downtown-pulse/: HERMES.md  README.md  pedestrian_downtown_pulse.py
usecases/tree-watering-ping/: README.md  tree_watering_ping.py
usecases/waste-pickup-reminder/: HERMES.md  README.md  waste_pickup_reminder.py
usecases/zdi-event-digest/: HERMES.md  README.md  zdi_event_digest.py
