[project]
name = "wuerzburg-tree-ping"
version = "0.1.0"
description = "Tiny Würzburg OpenData tree and water sensor monitor with Telegram and Hermes cron support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LucidPaths" }]
keywords = ["opendata", "wuerzburg", "telegram", "hermes", "sensors", "trees"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.scripts]
wuerzburg-tree-ping = "wuerzburg_tree_ping.cli:main"
wuerzburg-parking-ping = "wuerzburg_tree_ping.parking:main"
wuerzburg-bike-ping = "wuerzburg_tree_ping.bike:main"
wuerzburg-pedestrian-ping = "wuerzburg_tree_ping.pedestrian:main"
wuerzburg-waste-ping = "wuerzburg_tree_ping.waste:main"
wuerzburg-toilets-ping = "wuerzburg_tree_ping.toilets:main"
wuerzburg-events-ping = "wuerzburg_tree_ping.events:main"
wuerzburg-dashboard = "wuerzburg_tree_ping.dashboard:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
